--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,8 +4,8 @@
   <title>PingHouse</title>
   <!--<title>怡木庫房</title>-->
 
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => false %>
+
   <%= csrf_meta_tags %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,6 +62,8 @@
       
     </div>
   </div>
+
+  <%= javascript_include_tag "application", "data-turbolinks-track" => false %>
 
 </body>
 </html>
