pust js to bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,5 +62,6 @@
 	</div>
 
   <%= javascript_include_tag "application", "data-turbolinks-track" => false %>
+  <%= yield :google_map%>
 </body>
 </html>
