--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
 
  *= require bootstrap_and_customization
  *= require flat-ui
- *= require font-awesome
+ * require font-awesome
  *= require pages
 
 
