--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!--<title>PingHouse</title>-->
-  <!--<title>怡木庫房</title>-->
+  <title>怡木庫房</title>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => false %>
 
@@ -16,9 +16,7 @@
 
   <link rel="shortcut icon" href="<%= image_path("logo.jpg")%>">
 
-  <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoHXpUiEiwf7-GZkXAGr5glqi1p7H0C3M&sensor=false">
-  </script>
+
 
 <!--
   <meta name="Description" content="怡木庫房是由室內設計師的原木家具及鐵藝飾品商店，提供超高cp質具獨特品味的復古仿舊設計木質家具及雜貨zakka
