--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header col-md-4 div-logo">
+  <div class="navbar-header  div-logo">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
@@ -10,7 +10,7 @@
     
     
 
-      <%=image_tag('logo-nav.jpg', class: 'logo img-fullwidth img-rounded', id: 'logo-img')%>
+      <%=image_tag('logo-nav.jpg', class: 'logo img-rounded', id: 'logo-img')%>
         
         <!--<img class="logo" src="https://dl.dropboxusercontent.com/u/256084506/logo2.png"></img>-->
 
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  <div class="collapse navbar-collapse col-sm-7 col-md-7 pull-right" id="bs-example-navbar-collapse-1">
 
     
     <ul class="nav navbar-nav navbar-right">
