--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -4,8 +4,8 @@
 			<!--
 			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?src=9hrr4utehg31sstve4t8d0booc%40group.calendar.google.com&ctz=Asia/Taipei" style="border: 0" frameborder="0" scrolling="no"></iframe>-->
 
-			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?title=%E6%80%A1%E6%9C%A8%E5%BA%AB%E6%88%BF(PING%20HOUSE)%E7%A9%BA%E9%96%93%E9%A0%90%E7%B4%84&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=pinghouse01%40gmail.com&amp;color=%236B3304&amp;ctz=Asia%2FTaipei" style="border: 0" frameborder="0" scrolling="no"></iframe>
-
+    
+			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?src=pinghouse01%40gmail.com&ctz=Asia/Taipei&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=pinghouse01%40gmail.com&amp;color=%236B3304&amp;ctz=Asia%2FTaipei" style="border: 0" frameborder="0" scrolling="no"></iframe>
 	
 		</div>
 	</div>
