--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -125,7 +125,11 @@ div.collapse > ul.navbar-nav.navbar-right:last-child {
 
 
 
-
+.description{
+  //line-height: 35px;
+  font-size: 24px ;
+  color: #99BE80;
+}
 
 
 
