change concept h4 color

--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12 description">
 
 	<h2 class="green-color">飄逸著木香的的傢飾餐飲複合空間<h2>
-	<h4 class="description">舒適自然多層次的原木空間 獨特設計風格的家飾擺設 健康美味特製的安心餐飲                        
+	<h4 >舒適自然多層次的原木空間 獨特設計風格的家飾擺設 健康美味特製的安心餐飲                        
 怡木的五層次品味體驗 不要錯過! </h4><br/>
 
 	<h2 class="green-color">歡迎來怡木敲敲門，品味您的第二個家！</h2>
