--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -5,7 +5,9 @@
 			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?src=9hrr4utehg31sstve4t8d0booc%40group.calendar.google.com&ctz=Asia/Taipei" style="border: 0" frameborder="0" scrolling="no"></iframe>-->
 
     
-			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?src=pinghouse01%40gmail.com&ctz=Asia/Taipei&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=pinghouse01%40gmail.com&amp;color=%236B3304&amp;ctz=Asia%2FTaipei" style="border: 0" frameborder="0" scrolling="no"></iframe>
+			<iframe id="google-calendar" src="https://www.google.com/calendar/embed?src=pinghouse01%40gmail.com&ctz=Asia/Taipei&amp;showCalendars=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=pinghouse01%40gmail.com&amp;color=%236B3304&amp;ctz=Asia%2FTaipei" style="border: 0" frameborder="0" scrolling="no"></iframe>
+
+  
 	
 		</div>
 	</div>
