Change photo in footer

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -4,7 +4,7 @@
     
 
     <div class="col-md-12">
-      <%=image_tag('img-footer.jpg', class: "img-fullwidth")%>
+      <%=image_tag('img-footer.png', class: "img-fullwidth")%>
     </div>
 
     
