--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   <%=render_page_description_meta_tag%>
   <%=render_page_keywords_meta_tag%>
 
+<!-- Non RWD
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+-->
   <link rel="shortcut icon" href="<%= image_path("logo.jpg")%>">
 
 
