--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-12 description">
 
-	<h2 class="green-color">飄逸著木香的的傢飾餐飲複合空間<h2>
+	<h2 class="green-color">設計師的文藝空間~檜木香氣x特色包廂x典雅裝潢<h2>
 	<h4 >舒適自然多層次的原木空間 獨特設計風格的家飾擺設 健康美味特製的安心餐飲                        
 怡木的五層次品味體驗 不要錯過! </h4><br/>
 
