--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,23 +39,23 @@
 <div class="row img-link">
   <div class="col-md-3 div-link-logo">
     <%= link_to 'https://www.facebook.com/pinghouse.com.tw?ref=hl' do %>
-    <%=image_tag('facebook.jpg', class: "link-logo") %>
+    <%=image_tag('facebook.png', class: "link-logo") %>
     <% end %>
   </div>
 
   <div class="col-md-3 div-link-logo">
     <%= link_to 'http://class.ruten.com.tw/user/index00.php?s=0915631100' do %>
-    <%=image_tag('sky.jpg', class: " link-logo") %>
+    <%=image_tag('sky.png', class: " link-logo") %>
     <%end%>
   </div>
 
   <div class="col-md-3 div-link-logo">
     <%= link_to 'https://tw.search.bid.yahoo.com/search/ac;_ylt=AnLeAYIyqVO1DFWogM9mJhr3_rF8?ei=UTF-8&p=%E6%80%A1%E6%9C%A8%E5%BA%AB%E6%88%BF' do %>
-    <%=image_tag('yahoo.jpg', class: " link-logo") %>
+    <%=image_tag('yahoo.png', class: " link-logo") %>
     <%end%>
   </div>
 
   <div class="col-md-3 div-link-logo">
-    <%=image_tag('google360.jpg', class: " link-logo") %>
+    <%=image_tag('google360.png', class: " link-logo") %>
   </div>
 </div>
