--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,6 +56,11 @@
   </div>
 
   <div class="col-md-3 div-link-logo">
+    <%= link_to 'https://maps.google.com.tw/maps?q=%E6%80%A1%E6%9C%A8%E5%BA%AB%E6%88%BFPing+House&ie=UTF8&ll=25.02042,121.527629&spn=0.009022,0.017799&sll=25.021007,121.526983&layer=c&cid=17512875355829722430&panoid=uAp9WhMJEwYAAAQfCWe5tA&cbp=13,35.42,,0,0&brcurrent=3,0x3442a99bd1adbcc7:0xc5ab69bb7491162a,0,0x3442ac6b61dbbd9d:0xc0c243da98cba64b&t=m&z=17&cbll=25.021001,121.526939' do %>
     <%=image_tag('google360.png', class: " link-logo") %>
+    <%end%>
   </div>
 </div>
+
+
+
