--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+
 	<div class="col-md-12 description">
 
 	<h2 class="green-color">設計師的文藝空間~檜木香氣x特色包廂x典雅裝潢<h2>
@@ -22,20 +22,21 @@
 
 		<h2 class="green-color">怡木大哉問！</h2>
 		<ol style="font-weight: bold; font-size:22px;">
-			<li><h3 style="font-weight: bold;  ">怪怪的店名:<h3>  <font style="color: red;">"心"</font> &nbsp 愛  &nbsp <font style="color: red;">"台"</font> &nbsp 灣  &nbsp <font style="color: red;">"木"</font>  &nbsp 頭，令人心曠神 &nbsp <font style="color: red;">"怡"</font> &nbsp的原&nbsp <font style="color: red;">"木"</font> &nbsp空間，看出來了嗎？</li>
-			<li><h3 style="font-weight: bold;">怡木的怪異現象～～  <font style="font-size: 30px;">什麼！</font>要按電鈴才能進門？<h3>
-				<h4>有不少客人因為這個電鈴障礙而錯過與怡木相遇，好可惜啊！<br/>
+			<li><h3 class="title" style="font-weight: bold;  ">怪怪的店名:</h3> <h4 class="description"> <font style="color: red;">"心"</font> &nbsp 愛  &nbsp <font style="color: red;">"台"</font> &nbsp 灣  &nbsp <font style="color: red;">"木"</font>  &nbsp 頭，令人心曠神 &nbsp <font style="color: red;">"怡"</font> &nbsp的原&nbsp <font style="color: red;">"木"</font> &nbsp空間，看出來了嗎？</li></h4>
+			<li><h3 class="title" style="font-weight: bold;">怡木的怪異現象～～  <font style="font-size: 30px;">什麼！</font>要按電鈴才能進門？<h3>
+				<h4 class="description">有不少客人因為這個電鈴障礙而錯過與怡木相遇，好可惜啊！<br/>
 這是怡木複層式空間所造成的限制，工作人員無法固定在單一樓層，如果您不介意按一下電鈴並在門外稍候一下，帶著笑容的工作人員隨即迎您入門，在安全有門禁的空間裡享受與親友的相聚。
 </h4></li>
-			<li><h3 style="font-weight: bold;">怎麼有這麼多的樓梯啊！<h3>
-				<h4>怡木獨特的複層式空間及獨立包廂空間，每個樓梯通往不同的樓層與不同的包廂，第一次來的你可別昏了頭、迷了路呢？
+			<li><h3 class="title" style="font-weight: bold;">怎麼有這麼多的樓梯啊！</h3>
+				<h4 class="description">怡木獨特的複層式空間及獨立包廂空間，每個樓梯通往不同的樓層與不同的包廂，第一次來的你可別昏了頭、迷了路呢？
 師大商圈到處都是美食，咖啡/飲品店更是三五步就一家，但只有怡木特有的包廂能讓您及三五好友有獨立不受干擾的私有空間，讓您能自在放鬆的慢慢享用怡木的各式餐點，聞著淡淡的木香，在自然閒適溫馨舒壓的空間中享受五感的滿足。
 </h4></li>
-			<li><h3 style="font-weight: bold;">可包場租場地嗎？有開課程嗎？<h3><h4>怡木有各種獨特的大小空間可提供場地租用，並提供投影機/布幕/麥克風可租用，適合各式聚會/講座/活動 ，相信喜歡自然溫馨氛圍的團體一定不能錯過怡木的各式空間，有空來瞧瞧，怡木一定不會讓您失望！
+			<li><h3 class="title" style="font-weight: bold;">可包場租場地嗎？有開課程嗎？</h3><h4 class="description">怡木有各種獨特的大小空間可提供場地租用，並提供投影機/布幕/麥克風可租用，適合各式聚會/講座/活動 ，相信喜歡自然溫馨氛圍的團體一定不能錯過怡木的各式空間，有空來瞧瞧，怡木一定不會讓您失望！
 至於課程目前沒有規劃，但歡迎有專業才能的你來與我們洽詢合作的可能性喔！
 </h4></li>
 		</ol>
 		<br/>
 
 
-	</div>
+
+
