--- a/app/views/pages/rent.html.erb
+++ b/app/views/pages/rent.html.erb
@@ -43,6 +43,7 @@
 	</div>
 
 
+<br>
 <h2 class="green-color" > 空間包場注意事項: </h2>
 
 	<table class="table table-striped table-bordered" style="text-align: center;">
@@ -104,7 +105,7 @@
 	</table>
 
 <br>
-	<h2 class="green-color" > 長期包場優惠或相關場租問題請洽詢 (02)77316870</div>
+	<h2 class="green-color" > 長期包場優惠或相關場租問題請洽詢 (02)77316870</h2>
 
 
 
@@ -112,7 +113,7 @@
 		
 
 
-</div>
+
 
 
 </div>
