--- a/app/views/pages/rent.html.erb
+++ b/app/views/pages/rent.html.erb
@@ -44,6 +44,8 @@
 
 
 <br>
+
+<div class="col-md-12">
 <h2 class="green-color" > 空間包場注意事項: </h2>
 
 	<table class="table table-striped table-bordered" style="text-align: center;">
@@ -106,7 +108,7 @@
 
 <br>
 	<h2 class="green-color" > 長期包場優惠或相關場租問題請洽詢 (02)77316870</h2>
-
+</div>
 
 
 	
