Remove new-relic and revise the typo

--- a/app/views/pages/rent.html.erb
+++ b/app/views/pages/rent.html.erb
@@ -52,14 +52,14 @@
 		<thead >
 			<tr>
 				<th style="width: 15%; text-align: center;">空間名稱<br>(位置)</th>
-				<th style="width: 30%; text-align: center;">Zone12即小學堂<br>(2F)</th>
+				<th style="width: 30%; text-align: center;">Zone12及小學堂<br>(2F)</th>
 				<th style="width: 30%; text-align: center;">Zone20<br>(B1)</th>
-				<th style="width: 30%; text-align: center;" >Zone30即小學堂<br>(1F)</th>
+				<th style="width: 30%; text-align: center;" >Zone30<br>(1F)</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td >每場場租費用</th>
+				<td >每場場租<br>費用</th>
 				<td >＄1200/3.5hr<br>超時30分鐘$150</th>
 				<td >＄2400/3.5hr<br>超時30分鐘$300</th>
 				<td >＄3000/3.5hr<br>超時30分鐘$350</th>
