Add facebook og meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   <%=render_page_description_meta_tag%>
   <%=render_page_keywords_meta_tag%>
 
+  <meta property="og:title" content="怡木庫房 Ping House" />
+  <meta property="og:description" content="怡木庫房提供您空間、餐飲、傢俱傢飾的服務。" />
+  <meta property="og:image" content="<%= image_url('logo.jpg')%>" />
+
 <!-- Non RWD
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 -->
