--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <meta property="og:title" content="怡木庫房 Ping House" />
   <meta property="og:description" content="怡木庫房提供您空間、餐飲、傢俱傢飾的服務。" />
-  <meta property="og:image" content="<%= image_url('fb_open_graph.jpg')%>" />
+  <meta property="og:image" content="<%= image_url('logo-nav.jpg')%>" />
 
 <!-- Non RWD
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
