--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   <%=render_page_description_meta_tag%>
   <%=render_page_keywords_meta_tag%>
 
-  <meta property="og:title" content="怡木庫房 Ping House" />
-  <meta property="og:description" content="怡木庫房提供您空間、餐飲、傢俱傢飾的服務。" />
+  <meta property="og:title" content="怡木庫房 PingHouse" />
+  <meta property="og:description" content="怡木~設計師打造的各式原木餐飲空間。" />
   <meta property="og:image" content="<%= image_url('fb_open_graph.jpg')%>" />
 
 
